--- a/Game/Game.html
+++ b/Game/Game.html
@@ -29,7 +29,7 @@
                 just click on the Restart Button. Your score will reset.
             </p>
         </div>
-        <a id="homeButton" href="../Index.html">Go to Home Page</a>
+        <a id="homeButton" href="../index.html">Go to Home Page</a>
 
         <!-- Restart Button -->
         <button id="restartButton">Restart Game</button>
